[package]
name = "devcord_events"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
fluvio = "0.50.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serial_test = "3.2.0"
testcontainers = "0.25.0"
thiserror = "2.0.16"
tokio = {version = "1.47.1", features = ["sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
uuid = {version = "1.18.1", features = ["v4"] }
